--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -137,6 +137,36 @@
         app:layout_constraintVertical_bias="0.455"
         tools:ignore="TouchTargetSizeCheck" />
 
+    <Button
+        android:id="@+id/signup_pw_open"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/eye_open"
+        android:ems="10"
+        android:layout_marginLeft="230dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.455" />
+
+    <Button
+        android:id="@+id/signup_pw_close"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/eye_closed"
+        android:ems="10"
+        android:layout_marginLeft="230dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.455" />
+
     <TextView
         android:id="@+id/signup_pw_warn"
         android:layout_width="wrap_content"
@@ -184,6 +214,38 @@
         android:textColorHint="#DADADA"
         android:textSize="40px"
 
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_pw_et"
+        app:layout_constraintVertical_bias="0.106"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <EditText
+        android:id="@+id/signup_pw2_open"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/eye_open"
+        android:ems="10"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="230dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_pw_et"
+        app:layout_constraintVertical_bias="0.106"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <EditText
+        android:id="@+id/signup_pw2_close"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/eye_closed"
+        android:ems="10"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="230dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
         app:layout_constraintLeft_toLeftOf="parent"
