--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.096"
-        app:srcCompat="@drawable/img_girls" />
+        android:src="@drawable/img_girls" />
 
     <TextView
         android:id="@+id/textView3"
