--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -26,7 +26,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
-            android:hint="     서울 노원구"
+            android:hint="     약국 이름을 입력해 주세요"
             android:background="@drawable/search"
             android:textColorHint="#A0A0A0"
             android:lines="1"
