--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -111,7 +111,7 @@
                 android:textAlignment="textStart"/>
 
             <TextView
-                android:id="@+id/closeTV"
+                android:id="@+id/addressTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="187dp"
@@ -122,7 +122,7 @@
                 android:textAlignment="textStart"/>
 
             <TextView
-                android:id="@+id/locationTV"
+                android:id="@+id/phoneNumTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="187dp"
@@ -149,7 +149,7 @@
                 android:textAlignment="textStart"/>
 
             <TextView
-                android:id="@+id/phoneNumTV"
+                android:id="@+id/timeTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="187dp"
@@ -179,7 +179,7 @@
         android:layout_height="40dp"
         android:layout_below="@+id/search"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/icon_map_select" />
 </RelativeLayout>
