--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -6,10 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/mypageGirl_profile_iv"
         android:layout_width="350px"
         android:layout_height="350px"
+        android:layout_gravity="center"
+        app:civ_border_color="#ffffff"
+        app:civ_border_overlay="true"
+        app:civ_border_width="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
