--- a/app/src/main/res/layout/activity_column_detail.xml
+++ b/app/src/main/res/layout/activity_column_detail.xml
@@ -61,7 +61,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/nixgon_medium"
-                        android:text="칼럼 제목"
+                        android:text="아무도 알려주지 않은 탐폰"
                         android:textColor="@color/black"
                         android:textSize="60px"
                         android:textStyle="bold"
@@ -94,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nixgon_medium"
-                        android:text="칼럼 부제목"
+                        android:text="탐폰을 처음 사용하는 10대들을 위하여"
                         android:textColor="@color/black"
                         android:textSize="40px"
                         app:layout_constraintStart_toStartOf="@id/column_detail_title_tv"
