--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
@@ -26,11 +24,12 @@
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
-            android:hint="     약국 이름을 입력해 주세요"
+            android:hint="약국 이름을 입력해 주세요"
             android:background="@drawable/search"
+            android:paddingLeft="30dp"
             android:textColorHint="#A0A0A0"
             android:lines="1"
-            android:singleLine="true" />
+            android:singleLine="true"/>
 
 
         <Button
@@ -175,11 +174,11 @@
 
     <Button
         android:id="@+id/mylocationButton"
-        android:layout_width="32dp"
-        android:layout_height="40dp"
+        android:layout_width="200px"
+        android:layout_height="200px"
         android:layout_below="@+id/search"
         android:layout_alignParentStart="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/icon_map_select" />
+        android:background="@drawable/mypoint" />
 </RelativeLayout>
