--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                tools:listitem="@layout/item_chatting"/>
+                tools:listitem="@layout/item_chatting_room"/>
 
         </ScrollView>
 
