카테고리 그림자 적용 및 세부 디자인 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -194,12 +194,13 @@
         android:inputType="textEmailAddress"
         android:paddingLeft="15dp"
         android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:textColorHint="#DADADA"
         android:textSize="40px"
         app:layout_constraintBottom_toTopOf="@+id/login_pw_et"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
