--- a/app/src/main/res/layout/activity_column_detail.xml
+++ b/app/src/main/res/layout/activity_column_detail.xml
@@ -28,12 +28,12 @@
             android:id="@+id/column_detail_content_sv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:elevation="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="10dp">
+                android:layout_height="match_parent">
 
                 <Button
                     android:id="@+id/column_detail_bookmark_btn"
