--- a/app/src/main/res/layout/fragment_onboarding1.xml
+++ b/app/src/main/res/layout/fragment_onboarding1.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+
+    <ImageView
+        android:id="@+id/onboarding1_main_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="450dp"
+        android:src="@drawable/onboarding1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nixgon_bold"
+        android:gravity="center"
+        android:text="소녀돌봄 약국 위치 제공"
+        android:textColor="#484848"
+        android:textSize="64px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onboarding1_main_iv" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="480dp"
-            android:src="@drawable/onboarding1"/>
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="현재 위치에서 근접한 약국을 지도에서\n빠르게 찾고 정보를 얻어요."
+        android:textColor="#484848"
+        android:textSize="45px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="소녀돌봄 약국 위치 제공"
-            android:textSize="64px"
-            android:fontFamily="@font/nixgon_bold"
-            android:textColor="#484848"
-            android:gravity="center"/>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="13dp"
+        android:layout_marginTop="50px"
+        android:src="@drawable/count_one"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="현재 위치에서 근접한 약국을 지도에서\n빠르게 찾고 정보를 얻어요."
-            android:textSize="45px"
-            android:textColor="#484848"
-            android:gravity="center"
-            android:layout_marginTop="10dp"/>
+    <Button
+        android:id="@+id/onboarding1_start"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="13dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/count_one"/>
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="25dp"
 
-        <Button
-            android:id="@+id/onboarding1_start"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:text="시작하기"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:background="@drawable/round_green"/>
+        android:background="@drawable/round_green"
+        android:text="시작하기"
 
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
