--- a/app/src/main/res/layout/fragment_onboarding2.xml
+++ b/app/src/main/res/layout/fragment_onboarding2.xml
@@ -8,7 +8,7 @@
         <ImageView
             android:id="@+id/onboarding2_main_iv"
             android:layout_width="wrap_content"
-            android:layout_height="480dp"
+            android:layout_height="450dp"
             android:src="@drawable/onboarding2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -58,11 +58,16 @@
             android:id="@+id/onboarding2_start"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:text="시작하기"
             android:textColor="@color/white"
             android:textSize="16dp"
+
+
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="25dp"
+
+
             android:background="@drawable/round_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
